--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Live Translate">
     <meta property="og:site_name" content="Live Translate">
-    <meta property="og:description" content="Uses Chrome's Web Speech API for recognition and Google Translate for translation">
+    <meta property="og:description" content="Implements Chrome's Web Speech API for speech recognition and translate it with an external API">
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LiveTranslate</title>
