--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>LiveTranslate</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="h-full"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
