👷 add github actions workflow

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta property="og:title" content="Live Translate">
     <meta property="og:site_name" content="Live Translate">
     <meta property="og:description" content="Translate as you speak using Google Chrome's Web Speech API for speech recognition">
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LiveTranslate</title>
   </head>
   <body>
     <div id="app" class="h-full"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
