--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#6319e5">
+    <meta property="description" content="Translate as you speak using Google Chrome's Web Speech API for speech recognition" />
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Live Translate">
-    <meta property="og:site_name" content="Live Translate">
-    <meta property="og:description" content="Translate as you speak using Google Chrome's Web Speech API for speech recognition">
+    <meta property="og:title" content="LiveTranslate" />
+    <meta property="og:site_name" content="LiveTranslate" />
+    <meta property="og:description" content="Translate as you speak using Google Chrome's Web Speech API for speech recognition" />
+    <meta property="og:image" content="https://i.ibb.co/BtQfVCW/thumbnail.png" />
+    <meta name="twitter:title" content="LiveTranslate" />
+    <meta name="twitter:image" content="https://i.ibb.co/BtQfVCW/thumbnail.png" />
+    <meta name="twitter:description" content="Translate as you speak using Google Chrome's Web Speech API for speech recognition" />
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LiveTranslate</title>
   </head>
   <body>
