✨ migrate to vercel and change demo domain

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#6319e5">
+    <meta property="title" content="LiveTranslate" />
     <meta property="description" content="Translate as you speak using Google Chrome's Web Speech API for speech recognition" />
+    <meta name="theme-color" content="#6319e5">
+    <meta property="og:url" content="https://translate.sglkc.my.id" />
     <meta property="og:type" content="website">
     <meta property="og:title" content="LiveTranslate" />
-    <meta property="og:site_name" content="LiveTranslate" />
+    <meta property="og:site_name" content="translate.sglkc.my.id" />
     <meta property="og:description" content="Translate as you speak using Google Chrome's Web Speech API for speech recognition" />
-    <meta property="og:image" content="https://i.ibb.co/BtQfVCW/thumbnail.png" />
+    <meta property="og:image" content="https://translate.sglkc.my.id/thumbnail.png" />
+    <meta name="twitter:url" content="https://translate.sglkc.my.id" />
     <meta name="twitter:title" content="LiveTranslate" />
-    <meta name="twitter:image" content="https://i.ibb.co/BtQfVCW/thumbnail.png" />
+    <meta name="twitter:image" content="https://translate.sglkc.my.id/thumbnail.png" />
     <meta name="twitter:description" content="Translate as you speak using Google Chrome's Web Speech API for speech recognition" />
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <title>LiveTranslate</title>
